compiler/test-data/parser/control/errors/when_missing_body.frel
module control.errors.when_missing_body

blueprint Bad {
    when true
}
